<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:id="@+id/imageView"
        android:src="@drawable/body"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:visibility="visible"
        android:contentDescription="@string/body"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/eyes"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:contentDescription="@string/eyes" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/eyebrows"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:contentDescription="@string/brows"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/arms"
        android:layout_above="@+id/ears"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:visibility="invisible"
        android:contentDescription="@string/arms"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/shoes"
        android:layout_above="@+id/ears"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:visibility="invisible"
        android:contentDescription="@string/shoes"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/mouth"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:visibility="invisible"
        android:contentDescription="@string/mouth"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:src="@drawable/mustache"
        android:layout_above="@+id/ears"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:visibility="invisible"
        android:contentDescription="@string/stache"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:src="@drawable/nose"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:visibility="invisible"
        android:contentDescription="@string/nose"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView9"
        android:src="@drawable/glasses"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:contentDescription="@string/glass"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewA"
        android:src="@drawable/ears"
        android:layout_above="@+id/ears"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:visibility="invisible"
        android:contentDescription="@string/ears"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewB"
        android:src="@drawable/hat"
        android:layout_above="@+id/nose"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:visibility="invisible"
        android:contentDescription="@string/hat"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nose"
        android:id="@+id/nose"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:onClick="addNose"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ears"
        android:id="@+id/ears"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/nose"
        android:layout_alignStart="@+id/nose"
        android:onClick="addEars"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoes"
        android:id="@+id/shoes"
        android:layout_below="@+id/ears"
        android:layout_alignLeft="@+id/ears"
        android:layout_alignStart="@+id/ears"
        android:onClick="addShoes"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stache"
        android:id="@+id/moustache"
        android:layout_alignBaseline="@+id/shoes"
        android:layout_alignBottom="@+id/shoes"
        android:layout_alignLeft="@+id/glass"
        android:layout_alignStart="@+id/glass"
        android:onClick="addStache"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eyes"
        android:id="@+id/eyes"
        android:layout_above="@+id/moustache"
        android:layout_alignLeft="@+id/moustache"
        android:layout_alignStart="@+id/moustache"
        android:onClick="addEyes"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glass"
        android:id="@+id/glass"
        android:layout_above="@+id/eyes"
        android:layout_toRightOf="@+id/shoes"
        android:layout_toEndOf="@+id/shoes"
        android:onClick="addGlasses"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox7"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toRightOf="@+id/moustache"
        android:layout_toEndOf="@+id/moustache"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Checkbox"
        android:id="@+id/checkBox8"
        android:layout_alignTop="@+id/moustache"
        android:layout_alignLeft="@+id/checkBox7"
        android:layout_alignStart="@+id/checkBox7" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hat"
        android:id="@+id/hat"
        android:layout_below="@+id/checkBox8"
        android:layout_alignLeft="@+id/checkBox8"
        android:layout_alignStart="@+id/checkBox8"
        android:onClick="addHat"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mouth"
        android:id="@+id/mouth"
        android:layout_below="@+id/shoes"
        android:layout_alignLeft="@+id/shoes"
        android:layout_alignStart="@+id/shoes"
        android:onClick="addMouth"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brows"
        android:id="@+id/brows"
        android:layout_alignBaseline="@+id/mouth"
        android:layout_alignBottom="@+id/mouth"
        android:layout_toRightOf="@+id/shoes"
        android:layout_toEndOf="@+id/shoes"
        android:onClick="addBrows"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arms"
        android:id="@+id/arms"
        android:layout_alignBaseline="@+id/eyes"
        android:layout_alignBottom="@+id/eyes"
        android:layout_alignLeft="@+id/checkBox8"
        android:layout_alignStart="@+id/checkBox8"
        android:onClick="addArms"/>

   </RelativeLayout>
